--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -38,6 +38,24 @@ html, body {
   text-align: center;
 }
 
+.warcrafthomepage {
+  width: 50%;
+  height: 850px;
+  background-color: white;
+  display: inline-block;
+  float: right;
+  text-align: center;
+}
+
+.mischomepage {
+  width: 50%;
+  height: 850px;
+  background-color: white;
+  display: inline-block;
+  float: right;
+  text-align: center;
+}
+
 .gameonepage {
   width: 100%;
   height: 800px;
@@ -118,7 +136,7 @@ html, body {
   margin-top: 20%;
   font-weight: bolder;
   font-size: 20px;
-  padding: 20px;
+  /*padding: 20px;*/
   transition: 0.4s;
   text-align: left;
   margin-left: -7%;
