latest changes to frontend

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -8,21 +8,28 @@ html, body {
 }
 
 .dashboard {
-  width: 25%;
-  height: 900px;
+  width: 18%;
+  height: 670px;
   background-color: #1a1a1a;
   display: inline-block;
   float: left;
-  padding: 1%;
+  padding: 2%;
   z-index: 10;
   text-align: left;
   overflow: hidden;
   /*margin-top: -20px;*/
+  overflow-y: scroll;
+  padding-left: 0px;
+  /*background-image: url('../../images/panel.jpg');*/
+/*  background-image: url(http://www.imgbase.info/images/safe-wallpapers/video_games/eve_online/18165_eve_online.jpg);
+  background-size: 450%;
+  background-position: center center;
+  background-repeat: no-repeat;*/
 }
 
 .homepage {
   width: 50%;
-  height: 850px;
+  height: 670px;
   background-color: white;
   display: inline-block;
   float: right;
@@ -31,7 +38,25 @@ html, body {
 
 .evehomepage {
   width: 50%;
-  height: 850px;
+  height: 670px;
+  background-color: white;
+  display: inline-block;
+  float: right;
+  text-align: center;
+}
+
+.mischomepage {
+  width: 50%;
+  height: 670px;
+  background-color: white;
+  display: inline-block;
+  float: right;
+  text-align: center;
+}
+
+.warcrafthomepage {
+  width: 50%;
+  height: 670px;
   background-color: white;
   display: inline-block;
   float: right;
@@ -80,11 +105,12 @@ html, body {
   border-radius: 5px;
   background-image: url('../../images/pp.jpg');
   background-size: 125%;
-  display: inline-block;
+  display: block;
   overflow: hidden;
   float: left;
   margin-bottom: 10px;
   margin-top: 5%;
+  margin-left: 30%;
 }
 
 #pjsub {
@@ -93,8 +119,10 @@ html, body {
   text-align: left;
   /*margin-right: 10px;*/
   /*margin-left: 50%;*/
-  margin-top: 20px;
+  margin-top: 8%;
   color: white;
+  display: block;
+  margin-left: 24%;
 }
 
 
@@ -111,18 +139,29 @@ html, body {
 
 .game {
   width: 100%;
-  height: 100px;
-  border: 1px solid #1a1a1a;
-  border-bottom-color: grey;
+  height: 80px;
+  border: 1px solid transparent;
+  border-bottom-color: white;
+  border-left-color: white;
+  border-top-color: black;
+  border-right-color: black;
   /*border-radius: 10px;*/
-  margin-top: 20%;
+  margin-top: 25%;
+  margin-right: 10%;
   font-weight: bolder;
-  font-size: 20px;
-  padding: 20px;
+  background-color: black;
+  opacity: 0.8;
+  font-size: 18px;
+  padding: 10px;
   transition: 0.4s;
   text-align: left;
-  margin-left: -7%;
+  margin-right: 5%;
   color: red;
+}
+
+#addgame {
+  text-align: center;
+  font-size: 40px;
 }
 
 .game:hover {
@@ -159,6 +198,26 @@ html, body {
   transition: 1s;
   background-color: white;
   cursor: pointer;
+}
+
+#gameone:hover {
+  text-decoration: none;
+}
+
+#gametwo:hover {
+  text-decoration: none;
+}
+
+#gamethree:hover {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
 }
 
 #gamearrone {
@@ -282,15 +341,18 @@ html, body {
 @media only screen and (max-width: 900px) {
   
   .game{
-    font-size: 15px;
+    font-size: 14px;
   }
 
 }
 
 .dashgames {
   list-style: none;
-  margin-top: 50px;
+  /*margin-top: 50px;*/
   text-align: left;
+  margin-right: 10%;
+  width: 100%;
+  display: block;
 }
 
 #mainhr {
@@ -320,6 +382,6 @@ html, body {
   color: red;
 }
 
-
-
-
+.stay {
+  /*position: absolute;*/
+}
