--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -10,7 +10,7 @@ html, body {
 
 .dashboard {
   width: 18%;
-  height: 670px;
+  height: 100vh;
   background-color: #1a1a1a;
   display: inline-block;
   float: left;
@@ -50,7 +50,7 @@ html, body {
 
 .evehomepage {
   width: 50%;
-  height: 670px;
+  height: 100vh;
   background-color: white;
   display: inline-block;
   float: right;
@@ -126,7 +126,7 @@ html, body {
   color: silver;
   font-weight: lighter;
   align-content: center;
-  margin-left: -50%; 
+  margin-left: -50%;
 }
 
 .profilepic {
@@ -253,19 +253,19 @@ a:visited {
 }
 
 #gamearrone {
-  color: white; 
+  color: white;
   font-size: 16px;
   margin-left: 50%;
 }
 
 #gamearrtwo {
-  color: white; 
+  color: white;
   font-size: 16px;
   margin-left: 20%;
 }
 
 #gamearrthree {
-  color: white; 
+  color: white;
   font-size: 16px;
   margin-left: 38%;
 }
@@ -371,7 +371,7 @@ a:visited {
 
 
 @media only screen and (max-width: 900px) {
-  
+
   .game{
     font-size: 14px;
   }
@@ -499,7 +499,7 @@ a:visited {
   width: auto;
   height: 670px;
   margin-left: 20px;
-  scroll-behavior: smooth;  
+  scroll-behavior: smooth;
 }
 
 .loading {
