--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,6 +1,9 @@
+body {
+  background-color: #191d22 !important;
+
+}
 .GameDash {
   display: flex;
   width: 100%;
   height: 100vh;
-  background-color: #191d22;
 }
