--- a/src/components/widgets/world-of-warcraft/wow-armory/wowstyles/wowstyle.css
+++ b/src/components/widgets/world-of-warcraft/wow-armory/wowstyles/wowstyle.css
@@ -83,3 +83,10 @@
 	border-color: white;
 	border-width: 1px;
 }
+
+.selectaw {
+	font-family: 'Lato', sans-serif;
+	color: white;
+	font-size: 40px;
+	margin: 50px;
+}
