--- a/src/components/widgets/twitch/styles/twitchstyle.css
+++ b/src/components/widgets/twitch/styles/twitchstyle.css
@@ -24,13 +24,16 @@ input:focus {outline: none;}
 
 .twitch-container {
 	display: flex;
+
 }
 
 .reddit-container {
 	display: flex;
+	margin-right: 12px;
 	width: 35%;
 	height: 100%;
 	flex-direction: column;
+	overflow: hidden;
 }
 
 .twitch-social {
@@ -46,7 +49,9 @@ input:focus {outline: none;}
 	width: 100%;
 	height: 300px;
 	overflow-y: auto;
-	margin-right: 8px;
+	background-color: #3a3f4b;
+	margin-top: 12px;
+
 
 }
 
@@ -67,8 +72,8 @@ input:focus {outline: none;}
 
 
 .twitch-stream-icons{
-	width: 12px;
-  height: 12px;
+	width: 24px;
+  height: 24px;
 
 }
 
@@ -88,7 +93,7 @@ input:focus {outline: none;}
 
 .icon-bar {
 	display: flex;
-  width: 96%;
+  width: 100%;
   overflow-x: auto;
 }
 
@@ -106,4 +111,59 @@ input:focus {outline: none;}
 
 .active {
     background-color: #4CAF50;
+}
+
+/*SCROLL BAR*/
+
+::-webkit-scrollbar {
+    width: 1px;
+}
+
+::-webkit-scrollbar-track {
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+/*::-webkit-scrollbar-thumb {
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}*/
+
+
+
+/*REDDIT STREAM TABLE*/
+
+
+table{
+  width:100%;
+  table-layout: fixed;
+	background-color: #3a3f4b;
+	text-transform: uppercase;
+
+}
+.tbl-content{
+  height:300px;
+  overflow-x:auto;
+  margin-top: 0px;
+  border: 1px solid;
+	background-color: #3a3f4b;
+
+}
+th{
+  padding: 20px 15px;
+  text-align: left;
+  font-weight: 500;
+  font-size: 12px;
+  color: #fff;
+  text-transform: uppercase;
+	background-color: #3a3f4b;
+
+}
+td{
+  padding: 15px;
+  text-align: left;
+  vertical-align:middle;
+  font-weight: 300;
+  font-size: 12px;
+  color: #fff;
+  border-bottom: solid 1px;
+	background-color: #3a3f4b;
+
 }
