--- a/src/components/widgets/talent-calculators/talent-calculator.css
+++ b/src/components/widgets/talent-calculators/talent-calculator.css
@@ -2,3 +2,23 @@
   height: 200px;
   width: 600px;
 }
+
+.talent-calc-buttons {
+  width: 100px;
+  height: 30px;
+  border-radius: 16px;
+  background-color: #23c1b2;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
+  margin-top: 24px;
+  margin-bottom: 16px;
+}
+
+.small-calc-button {
+  width: 70px;
+  height: 34px;
+  border-radius: 16px;
+  background-color: #23c1b2;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
+  margin-top: 24px;
+  margin-bottom: 16px;
+}
