--- a/src/components/widgets/twitch/styles/twitchstyle.css
+++ b/src/components/widgets/twitch/styles/twitchstyle.css
@@ -142,10 +142,11 @@ table{
   height:300px;
   overflow-x:auto;
   margin-top: 0px;
-  border: 1px solid;
+  border: 2px solid #191d22;
 	background-color: #3a3f4b;
 
 }
+
 th{
   padding: 20px 15px;
   text-align: left;
@@ -154,8 +155,8 @@ th{
   color: #fff;
   text-transform: uppercase;
 	background-color: #3a3f4b;
-
 }
+
 td{
   padding: 15px;
   text-align: left;
@@ -163,7 +164,27 @@ td{
   font-weight: 300;
   font-size: 12px;
   color: #fff;
-  border-bottom: solid 1px;
+  border-bottom: solid 2px #191d22;
 	background-color: #3a3f4b;
+}
 
+
+.panel {
+	font-family: 'Lato', sans-serif;
+	border-radius: 0 !important;
+	background-color: #3a3f4b;
+	border-color: #3a3f4b;
+	padding: 15px;
+  text-align: left;
+  vertical-align:middle;
+  font-weight: 300;
+  font-size: 12px;
+  color: #fff;
+}
+
+.tbl-content {
+	padding-left: 12px;
+	font-family: 'Lato', sans-serif;
+	font-size: 20px;
+	color: white;
 }
